# Agent--Code

./: .gitignore  README.md
Node/第一章/03-llm-generation-demo/: generation-loop.mjs
Node/第一章/06-context-window-demo/: context-budget.js  observe-context.js
Node/第一章/07-model-boundary-demo/: temperature-demo.js  (+1 more)
Python/第二章/12-enterprise-knowledge-base/: README.md  docker-compose.yml  pyproject.toml
Python/第二章/12-enterprise-knowledge-base/app/: __init__.py  ai_service.py  auth.py  config.py  document_service.py  exceptions.py  filtering.py  knowledge_service.py  main.py  markdown_chunker.py  milvus_store.py  models.py
Python/第二章/12-enterprise-knowledge-base/app/static/: app.js  index.html  styles.css
Python/第二章/12-enterprise-knowledge-base/sample_documents/: bluewhale-company-refund-v2.md  bluewhale-company-refund.md  bluewhale-customer-service.md  bluewhale-finance.md  starlight-promotion.md
Python/第二章/12-enterprise-knowledge-base/scripts/: doctor.py  seed.py
Python/第二章/12-enterprise-knowledge-base/tests/: test_ai_service.py  test_document_service.py  test_filtering.py  test_knowledge_service.py  test_markdown_chunker.py
第一章/03-llm-generation-demo/: README.md  generation-loop.mjs
第一章/04-token-demo/: toy-tokenizer.mjs
第一章/05-deepseek-message-demo/: multi-turn.mjs
第一章/08-model-router-demo/: task-profiler.js
第一章/09-transformer-attention-demo/: attention-demo.js
第二章/03-memory-vector-search/: memory-vector-search.js
第二章/04-document-chunking/: build-chunks.js  memory-vector-search.js
第二章/05-milvus-zilliz-vector-store/: .env.example  milvus-rag-store.js
(+209 files in other folders)
